5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4180/executions/1644_1054.log
== SUBMITION (2019-04-09 17:38:44) 
-- CODE:
varx = float(input('valor de x: '))
vary = float(input('valor de y: '))

if ((2*varx)+ vary == 3):
	print('ponto pertence a reta')
else:
	print('ponto nao pertence a reta')
-- EXECUTION TIME:
0.187451
-- TEST CASE 1:
---- input:
20
-37
---- correct output:
ponto pertence a reta
---- user output:
ponto pertence a reta
-- TEST CASE 2:
---- input:
5
13
---- correct output:
ponto nao pertence a reta
---- user output:
ponto nao pertence a reta
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 08:42:12) 
-- CODE:
varx = float(input('valor de x: '))
vary = float(input('valor de y: '))

if ((2*varx)+ vary == 3):
	print('ponto pertence a reta')
else:
	print('ponto nao pertence a reta')
-- OUTPUT:
ponto pertence a reta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 08:42:22) 
-- CODE:
varx = float(input('valor de x: '))
vary = float(input('valor de y: '))

if ((2*varx)+ vary == 3):
	print('ponto pertence a reta')
else:
	print('ponto nao pertence a reta')
-- OUTPUT:
ponto pertence a reta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 08:42:29) 
-- CODE:
varx = float(input('valor de x: '))
vary = float(input('valor de y: '))

if ((2*varx)+ vary == 3):
	print('ponto pertence a reta')
else:
	print('ponto nao pertence a reta')
-- OUTPUT:
ponto pertence a reta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 08:43:11) 
-- CODE:
x = float(input('valor de x: '))
y = float(input('valor de y: '))

if ((2*x)+ y == 3):
	print('ponto pertence a reta')
else:
	print('ponto nao pertence a reta')
-- OUTPUT:
ponto pertence a reta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 08:43:21) 
-- CODE:
x = float(input('valor de x: '))
y = float(input('valor de y: '))

if ((2*x)+ y == 3):
	print('ponto pertence a reta')
else:
	print('ponto nao pertence a reta')
-- OUTPUT:
ponto pertence a reta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 08:45:53) 
-- CODE:
x = float(input('valor de x: '))
y = float(input('valor de y: '))

if ((2*x)+ y == 3):
	print('ponto pertence a reta')
else:
	print('ponto nao pertence a reta')
-- OUTPUT:
ponto pertence a reta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 08:48:05) 
-- CODE:
x = float(input('valor de x: '))
y = float(input('valor de y: '))

if ((2*x)+ y == 3):
	print('ponto pertence a reta')
else:
	print('ponto nao pertence a reta')
-- OUTPUT:
ponto pertence a reta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 09:00:41) 
-- CODE:
x = float(input('valor de x: '))
y = float(input('valor de y: '))

if ((2*x)+ y == 3):
	print('ponto pertence a reta')
else:
	print('ponto nao pertence a reta')
-- OUTPUT:
ponto pertence a reta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 09:01:06) 
-- CODE:
x = float(input('valor de x: '))
y = float(input('valor de y: '))

if ((2*x)+ y = 3):
	print('ponto pertence a reta')
else:
	print('ponto nao pertence a reta')
-- ERROR:
File "XXXX", line 4
    if ((2*x)+ y = 3):
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 09:01:28) 
-- CODE:
x = float(input('valor de x: '))
y = float(input('valor de y: '))

if ((2*x)+ y == 3):
	print('ponto pertence a reta')
else:
	print('ponto nao pertence a reta')
-- OUTPUT:
ponto pertence a reta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 09:02:01) 
-- CODE:
x = float(input('valor de x: '))
y = float(input('valor de y: '))

if ((2*x)+ y == 3):
	print('ponto pertence a reta')
else:
	print('ponto nao pertence a reta')
-- EXECUTION TIME:
0.141325
-- TEST CASE 1:
---- input:
20
-37
---- correct output:
ponto pertence a reta
---- user output:
ponto pertence a reta
-- TEST CASE 2:
---- input:
5
13
---- correct output:
ponto nao pertence a reta
---- user output:
ponto nao pertence a reta
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
